# watchtower

dind-python-project/: .dockerignore  .env  .env.template  .pre-commit-config.yaml  README.md  pyproject.toml
dind-python-project/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup-github-runner.sh
dind-python-project/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  changelog-config.json  dependabot.yml  stale.yml
dind-python-project/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
dind-python-project/.github/workflows/: ci.yml  codeql-analysis.yml  release.yml
dind-python-project/src/: main.py
dind-python-project/src/dind_python_project/: __init__.py  cli.py  config.py
dind-python-project/src/dind_python_project/api/: __init__.py  app.py  test_app.py
dind-python-project/src/dind_python_project/core/: conftest.py  processor.py
dind-python-project/tests/core/: test_processor.py
