[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dind-python-project"
version = "0.1.0"
description = "A Python project using Docker and Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "youremail@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=2.2.3",
    "requests>=2.28.1",
    "pydantic>=2.4.0",
    "numpy>=1.24.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
]
cuda = [
    "torch>=2.0.0",
    "tensorflow>=2.12.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/dind-python-project"
"Bug Tracker" = "https://github.com/yourusername/dind-python-project/issues"

[project.scripts]
dind-app = "dind_python_project.cli:main"

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=dind_python_project"